--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 .background{
-    background-image: url("../img/backgroundindex.jpg.jpg");
+    background-image: url("../img/backgroundindex.jpg");
     background-size: cover;
 }
 
